# hebrew-fuzzy-study

./: README.md  doctor.py  hebrew_tui.py  import_tanakh.py  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
hebrew_fuzzy_study/: hebrew_tui.py  import_tanakh.py  paths.py
hebrew_fuzzy_study.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
